--- a/src/Interfaz/InterfazPrincipal.form
+++ b/src/Interfaz/InterfazPrincipal.form
@@ -158,7 +158,7 @@
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel1">
           <Properties>
-            <Property name="text" type="java.lang.String" value="DURACI&#xd3;N DE CADA CICLO (En nanosegundos)"/>
+            <Property name="text" type="java.lang.String" value="DURACI&#xd3;N DE CADA CICLO (En milisegundos)"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel2">
