--- a/src/Interfaz/InterfazInicial.form
+++ b/src/Interfaz/InterfazInicial.form
@@ -46,7 +46,7 @@
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
                               <Component id="CantidadCpuSelect" min="-2" pref="255" max="-2" attributes="0"/>
-                              <Component id="jTextField1" alignment="0" min="-2" pref="255" max="-2" attributes="0"/>
+                              <Component id="CicloTextField" alignment="0" min="-2" pref="255" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace min="-2" pref="86" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
@@ -80,7 +80,7 @@
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="IniciarBoton" alignment="3" min="-2" pref="39" max="-2" attributes="0"/>
-                      <Component id="jTextField1" alignment="3" min="-2" pref="39" max="-2" attributes="0"/>
+                      <Component id="CicloTextField" alignment="3" min="-2" pref="39" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace pref="97" max="32767" attributes="0"/>
               </Group>
@@ -159,12 +159,12 @@
             <Property name="text" type="java.lang.String" value="CANTIDAD DE CPUS"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="jTextField1">
+        <Component class="javax.swing.JTextField" name="CicloTextField">
           <Properties>
             <Property name="toolTipText" type="java.lang.String" value="E.g: 1000"/>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTextField1ActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="CicloTextFieldActionPerformed"/>
           </Events>
         </Component>
       </SubComponents>
